<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_seguro_pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/seguro_estudiar"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="33dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/te_costara_estudiar"
            android:textStyle="bold" />

        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tv_seguro_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="0"
            android:textColor="@color/verde_oscuro"
            android:textStyle="bold" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moneda"
            android:textColor="@color/verde_oscuro"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/tv_advertencia_dinero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/atributo_tipo_style"
        android:fontFamily="casual"
        android:textColor="@color/colorAccent"
        android:textSize="0sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_no_pagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_usar_style"
            android:fontFamily="casual"
            android:onClick="no_estudiar_educacion"
            android:text="@string/no"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_si_pagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_malvender_style"
            android:fontFamily="casual"
            android:text="@string/si"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>