<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_atras_style_ripple"
    tools:context=".inventario.UsarObjetoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:dividerPadding="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_usar_objeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btns_home_style"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/usar_objeto" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/btn_malvender_objeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btns_home_style"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/malvender_objeto" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/btn_tirar_objeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btns_home_style"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/tirar_objeto" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>