<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trabajo.BuscarTrabajoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/fondo_buscador_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_atras_style_ripple"
            android:fontFamily="casual"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:paddingRight="8dp"
            android:text="@string/buscador_trabajo"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_buscador_trabajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/buscador_style"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/trabajo_hint"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            android:paddingTop="1dp"
            android:paddingRight="8dp"
            android:paddingBottom="1dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_buscar_trabajo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Button
            android:id="@+id/btn_buscar_trabajo"
            android:onClick="buscar_trabajos"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/btns_invent_style"
            android:fontFamily="casual"
            android:text="@string/buscar"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/et_buscador_trabajo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/et_buscador_trabajo"
            app:layout_constraintTop_toTopOf="@+id/et_buscador_trabajo" />

        <TextView
            android:id="@+id/tv_tipo_basico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/atributo_tipo_style"
            android:clickable="true"
            android:fontFamily="casual"
            android:onClick="clickado_tipo"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:paddingRight="8dp"
            android:text="@string/basico"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_tipo_matematicas"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_buscador_trabajo" />

        <TextView
            android:id="@+id/tv_tipo_matematicas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/atributo_tipo_style"
            android:fontFamily="casual"
            android:onClick="clickado_tipo"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:paddingRight="8dp"
            android:text="@string/matematicas"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_tipo_letras"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_tipo_basico"
            app:layout_constraintTop_toBottomOf="@+id/et_buscador_trabajo" />

        <TextView
            android:id="@+id/tv_tipo_letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/atributo_tipo_style"
            android:fontFamily="casual"
            android:onClick="clickado_tipo"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:paddingRight="8dp"
            android:text="@string/letras"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_tipo_informatica"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_tipo_matematicas"
            app:layout_constraintTop_toBottomOf="@+id/et_buscador_trabajo" />

        <TextView
            android:id="@+id/tv_tipo_informatica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/atributo_tipo_style"
            android:fontFamily="casual"
            android:onClick="clickado_tipo"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:paddingRight="8dp"
            android:text="@string/informatica"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_tipo_rural"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_tipo_letras"
            app:layout_constraintTop_toBottomOf="@+id/et_buscador_trabajo" />

        <TextView
            android:id="@+id/tv_tipo_rural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/atributo_tipo_style"
            android:fontFamily="casual"
            android:onClick="clickado_tipo"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:paddingRight="8dp"
            android:text="@string/rural"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_tipo_informatica"
            app:layout_constraintTop_toBottomOf="@+id/et_buscador_trabajo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/fondo_buscador_style"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <FrameLayout
            android:id="@+id/frame_lista_trabajo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_lista_educacion_style">

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>